fix sidebar margin on mobile

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -88,7 +88,7 @@ html {
 
 /* Sidebar nav */
 .sidebar-nav {
-  margin-bottom: 10rem;
+  margin-bottom: 1rem;
 }
 .sidebar-nav-item {
   display: block;
